--- a/experience.html
+++ b/experience.html
@@ -89,7 +89,7 @@
               <article>
                 <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
                 <div>
-                  <h3>C Programming</h3>
+                  <h3>C Program</h3>
                   <p>Basic</p>
                 </div>
               </article>
